--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --open",
     "build": "cross-env NODE_ENV=production webpack --mode production",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "lint": "eslint ./src"
   },
   "husky": {
@@ -43,7 +45,9 @@
     "eslint": "^7.13.0",
     "eslint-config-google": "^0.14.0",
     "eslint-loader": "^4.0.2",
+    "eslint-plugin-jest": "^24.1.3",
     "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.2.1",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.4",
